# cppChameleon

./: .gitignore  CMakeLists.txt
include/gameLayer/: ClientGameplay.h  ClientNetworking.h  PhysicsController.h  ServerGameplay.h  gameLayer.h  packet.h
include/platform/: gridMesh.h  platformInput.h
resources/: player.glb  player2.glb  player3.glb
src/gameLayer/: ClientGameplay.cpp  ClientNetworking.cpp  PhysicsController.cpp  ServerGameplay.cpp  gameLayer.cpp  packet.cpp
src/platform/: glfwMain.cpp  gridMesh.cpp  platformInput.cpp
